--- a/index.html
+++ b/index.html
@@ -133,6 +133,19 @@
     </footer>
 
     <script>
+        // إعداد Firebase
+const firebaseConfig = {
+  apiKey: "AIzaSyAtImiW_CiyzDqypdI4Ve8KIOqxC9TGRQE",
+  authDomain: "taleem-6c9b2.firebaseapp.com",
+  projectId: "taleem-6c9b2",
+  storageBucket: "taleem-6c9b2.firebasestorage.app",
+  messagingSenderId: "746506526783",
+  appId: "1:746506526783:web:2f2c24a0661f3c2bbc588a"
+
+        // Initialize Firebase
+        const app = firebase.initializeApp(firebaseConfig);
+        const auth = firebase.auth();
+
         // أمثلة لآراء الطلاب
         const reviews = [
             "أكاديمية رائعة، تعلمت الكثير!",
