--- a/logout.html
+++ b/logout.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>تسجيل الخروج</title>
 
+    <!-- إضافة Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
+
     <!-- تنسيق CSS داخل الصفحة -->
     <style>
         body {
@@ -57,11 +61,6 @@
             bottom: 0;
         }
     </style>
-
-    <!-- إضافة Firebase SDK -->
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js"></script>
 </head>
 <body>
     <header>
@@ -80,14 +79,13 @@
 
     <script>
         // إعداد Firebase
-        const firebaseConfig = {
-            apiKey: "AIzaSyAzUK08KZM997SmDZiaw2cBciLZoP2e5a0",
-            authDomain: "taleem-6c9b2.firebaseapp.com",
-            projectId: "taleem-6c9b2",
-            storageBucket: "taleem-6c9b2.appspot.com",
-            messagingSenderId: "746506526783",
-            appId: "1:746506526783:web:516f4b2b98562b3dbc588a"
-        };
+const firebaseConfig = {
+  apiKey: "AIzaSyAtImiW_CiyzDqypdI4Ve8KIOqxC9TGRQE",
+  authDomain: "taleem-6c9b2.firebaseapp.com",
+  projectId: "taleem-6c9b2",
+  storageBucket: "taleem-6c9b2.firebasestorage.app",
+  messagingSenderId: "746506526783",
+  appId: "1:746506526783:web:2f2c24a0661f3c2bbc588a"
 
         // تهيئة Firebase
         const app = firebase.initializeApp(firebaseConfig);
