--- a/student-dashboard.html
+++ b/student-dashboard.html
@@ -1,38 +1,15 @@
-<?php
-// الاتصال بقاعدة البيانات
-$servername = "localhost";
-$username = "root";  // اسم المستخدم لقاعدة البيانات
-$password = "";      // كلمة المرور
-$dbname = "altebean_ac";  // اسم قاعدة البيانات
-
-// إنشاء الاتصال
-$conn = new mysqli($servername, $username, $password, $dbname);
-
-// التحقق من الاتصال
-if ($conn->connect_error) {
-  die("فشل الاتصال بالقاعدة: " . $conn->connect_error);
-}
-
-// استرجاع بيانات الطالب
-$student_id = 1; // يجب تعديل هذا ليتناسب مع معرّف الطالب الذي سجل الدخول
-$sql = "SELECT * FROM students WHERE id = $student_id";
-$result = $conn->query($sql);
-
-if ($result->num_rows > 0) {
-  $student = $result->fetch_assoc();
-} else {
-  echo "لا توجد بيانات للطالب.";
-}
-
-$conn->close();
-?>
 <!DOCTYPE html>
 <html lang="ar">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>لوحة تحكم الطالب - أكاديمية التبيان</title>
-    
+
+    <!-- إضافة Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js"></script>
+
     <!-- تنسيق CSS داخل الصفحة -->
     <style>
         /* تنسيق الصفحة بشكل عام */
@@ -132,11 +109,6 @@ $conn->close();
             margin: 10px 0;
         }
     </style>
-
-    <!-- إضافة Firebase SDK -->
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js"></script>
 </head>
 <body>
     <header>
@@ -186,15 +158,13 @@ $conn->close();
 
     <script>
         // إعداد Firebase
-        const firebaseConfig = {
-            apiKey: "AIzaSyAzUK08KZM997SmDZiaw2cBciLZoP2e5a0",
-            authDomain: "taleem-6c9b2.firebaseapp.com",
-            projectId: "taleem-6c9b2",
-            storageBucket: "taleem-6c9b2.appspot.com",
-            messagingSenderId: "746506526783",
-            appId: "1:746506526783:web:516f4b2b98562b3dbc588a"
-        };
-
+const firebaseConfig = {
+  apiKey: "AIzaSyAtImiW_CiyzDqypdI4Ve8KIOqxC9TGRQE",
+  authDomain: "taleem-6c9b2.firebaseapp.com",
+  projectId: "taleem-6c9b2",
+  storageBucket: "taleem-6c9b2.firebasestorage.app",
+  messagingSenderId: "746506526783",
+  appId: "1:746506526783:web:2f2c24a0661f3c2bbc588a"
         // تهيئة Firebase
         const app = firebase.initializeApp(firebaseConfig);
         const auth = firebase.auth();
