--- a/signup.html.html
+++ b/signup.html.html
@@ -7,7 +7,7 @@
     <title>التسجيل - أكاديمية التبيان</title>
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600&display=swap" rel="stylesheet">
     <style>
-        /* نفس التنسيق السابق */
+        /* تحسينات عامة */
         body {
             font-family: 'Cairo', sans-serif;
             background-color: #f4f7f6;
@@ -15,6 +15,19 @@
             direction: rtl;
             margin: 0;
             padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-image: linear-gradient(45deg, #2c7a2e, #4e9f5f);
+            background-size: 400% 400%;
+            animation: gradient-animation 10s ease infinite;
+        }
+
+        @keyframes gradient-animation {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
         }
 
         header {
@@ -22,44 +35,64 @@
             padding: 20px;
             background-color: #2c7a2e;
             color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
 
         h1 {
             font-size: 2.5em;
+            margin-bottom: 10px;
+            text-transform: uppercase;
         }
 
         section {
             margin: 20px;
-            padding: 20px;
+            padding: 40px;
             background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            border-radius: 12px;
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+            width: 100%;
+            max-width: 400px;
+            transition: transform 0.3s ease-in-out;
+        }
+
+        section:hover {
+            transform: translateY(-10px);
         }
 
         label {
             display: block;
-            margin-bottom: 8px;
+            margin-bottom: 10px;
             font-size: 1.2em;
+            color: #555;
         }
 
         input[type="email"],
         input[type="password"] {
             width: 100%;
-            padding: 10px;
+            padding: 15px;
             margin-bottom: 20px;
             border: 1px solid #ccc;
-            border-radius: 5px;
-            font-size: 1em;
+            border-radius: 8px;
+            font-size: 1.1em;
+            transition: border-color 0.3s ease;
+        }
+
+        input[type="email"]:focus,
+        input[type="password"]:focus {
+            border-color: #2c7a2e;
+            outline: none;
         }
 
         button {
-            padding: 10px 20px;
+            padding: 15px 30px;
             background-color: #2c7a2e;
             color: #fff;
             border: none;
-            border-radius: 5px;
+            border-radius: 8px;
             cursor: pointer;
             font-size: 1.2em;
+            transition: background-color 0.3s ease;
         }
 
         button:hover {
@@ -68,19 +101,37 @@
 
         footer {
             text-align: center;
-            margin-top: 20px;
+            margin-top: 30px;
         }
 
         footer a {
             color: #2c7a2e;
             text-decoration: none;
+            font-weight: bold;
         }
+
+        footer a:hover {
+            text-decoration: underline;
+        }
+
+        /* إضافة تأثيرات على النص */
+        .fade-in {
+            opacity: 0;
+            animation: fadeIn 2s forwards;
+        }
+
+        @keyframes fadeIn {
+            to {
+                opacity: 1;
+            }
+        }
+
     </style>
 </head>
 
 <body>
     <header>
-        <h1>التسجيل في أكاديمية التبيان</h1>
+        <h1 class="fade-in">التسجيل في أكاديمية التبيان</h1>
     </header>
 
     <section>
@@ -104,13 +155,14 @@
 
     <script>
         // إعدادات Firebase الخاصة بك
-const firebaseConfig = {
-  apiKey: "AIzaSyAtImiW_CiyzDqypdI4Ve8KIOqxC9TGRQE",
-  authDomain: "taleem-6c9b2.firebaseapp.com",
-  projectId: "taleem-6c9b2",
-  storageBucket: "taleem-6c9b2.firebasestorage.app",
-  messagingSenderId: "746506526783",
-  appId: "1:746506526783:web:2f2c24a0661f3c2bbc588a"
+        const firebaseConfig = {
+            apiKey: "AIzaSyAtImiW_CiyzDqypdI4Ve8KIOqxC9TGRQE",
+            authDomain: "taleem-6c9b2.firebaseapp.com",
+            projectId: "taleem-6c9b2",
+            storageBucket: "taleem-6c9b2.firebasestorage.app",
+            messagingSenderId: "746506526783",
+            appId: "1:746506526783:web:2f2c24a0661f3c2bbc588a"
+        };
         // تهيئة Firebase
         firebase.initializeApp(firebaseConfig);
 
