--- a/login.html
+++ b/login.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>تسجيل الخروج</title>
+    <title>تسجيل الدخول</title>
 
     <!-- إضافة Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
-
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js"></script> <!-- إضافة Firestore -->
+    
     <!-- تنسيق CSS داخل الصفحة -->
     <style>
         body {
@@ -17,6 +18,10 @@
             margin: 0;
             padding: 0;
             direction: rtl;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
         }
 
         header {
@@ -24,11 +29,16 @@
             color: white;
             padding: 20px;
             text-align: center;
+            width: 100%;
         }
 
         section {
+            background-color: #fff;
+            padding: 40px;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            width: 350px;
             text-align: center;
-            margin-top: 50px;
         }
 
         p {
@@ -36,15 +46,25 @@
             margin: 20px 0;
         }
 
+        input[type="email"],
+        input[type="password"] {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 20px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            font-size: 16px;
+        }
+
         button {
             background-color: #4CAF50;
             color: white;
-            padding: 10px 20px;
+            padding: 12px 30px;
             border: none;
             border-radius: 5px;
             cursor: pointer;
-            margin: 10px;
             font-size: 16px;
+            transition: background-color 0.3s ease;
         }
 
         button:hover {
@@ -62,15 +82,20 @@
         }
     </style>
 </head>
+
 <body>
     <header>
-        <h1>تسجيل الخروج</h1>
+        <h1>تسجيل الدخول إلى أكاديمية التبيان</h1>
     </header>
 
     <section>
-        <p>هل أنت متأكد من أنك تريد تسجيل الخروج؟</p>
-        <button onclick="logout()">نعم، تسجيل الخروج</button>
-        <button onclick="window.location.href='index.html'">إلغاء</button>
+        <p>قم بتسجيل الدخول باستخدام بريدك الإلكتروني وكلمة المرور.</p>
+        <form id="loginForm">
+            <input type="email" id="email" placeholder="البريد الإلكتروني" required>
+            <input type="password" id="password" placeholder="كلمة المرور" required>
+            <button type="submit">تسجيل الدخول</button>
+        </form>
+        <p>ليس لديك حساب؟ <a href="signup.html" style="color: #4CAF50;">تسجيل حساب جديد</a></p>
     </section>
 
     <footer>
@@ -79,26 +104,49 @@
 
     <script>
         // إعداد Firebase
-const firebaseConfig = {
-  apiKey: "AIzaSyAtImiW_CiyzDqypdI4Ve8KIOqxC9TGRQE",
-  authDomain: "taleem-6c9b2.firebaseapp.com",
-  projectId: "taleem-6c9b2",
-  storageBucket: "taleem-6c9b2.firebasestorage.app",
-  messagingSenderId: "746506526783",
-  appId: "1:746506526783:web:2f2c24a0661f3c2bbc588a"
+        const firebaseConfig = {
+            apiKey: "AIzaSyAtImiW_CiyzDqypdI4Ve8KIOqxC9TGRQE",
+            authDomain: "taleem-6c9b2.firebaseapp.com",
+            projectId: "taleem-6c9b2",
+            storageBucket: "taleem-6c9b2.firebasestorage.app",
+            messagingSenderId: "746506526783",
+            appId: "1:746506526783:web:2f2c24a0661f3c2bbc588a"
+        };
 
-        // تهيئة Firebase
         const app = firebase.initializeApp(firebaseConfig);
         const auth = firebase.auth();
+        const db = firebase.firestore(); // الاتصال بـ Firestore
 
-        // وظيفة تسجيل الخروج
-        function logout() {
-            auth.signOut().then(() => {
-                window.location.href = 'login.html'; // إعادة التوجيه إلى صفحة تسجيل الدخول
-            }).catch((error) => {
-                alert('حدث خطأ أثناء تسجيل الخروج: ' + error.message);
-            });
-        }
+        // وظيفة تسجيل الدخول
+        const loginForm = document.getElementById('loginForm');
+        loginForm.addEventListener('submit', (e) => {
+            e.preventDefault();
+
+            const email = document.getElementById('email').value;
+            const password = document.getElementById('password').value;
+
+            auth.signInWithEmailAndPassword(email, password)
+                .then((userCredential) => {
+                    const user = userCredential.user;
+                    // استرجاع الدور من Firestore بناءً على البريد الإلكتروني
+                    db.collection('users').doc(user.uid).get().then((doc) => {
+                        if (doc.exists) {
+                            const userRole = doc.data().role; // استرجاع الدور (student أو teacher)
+                            if (userRole === 'teacher') {
+                                window.location.href = 'teacher-dashboard.html'; // توجيه إلى صفحة المعلمين
+                            } else if (userRole === 'student') {
+                                window.location.href = 'student-dashboard.html'; // توجيه إلى صفحة الطلاب
+                            }
+                        }
+                    }).catch((error) => {
+                        console.error("حدث خطأ أثناء استرجاع البيانات: ", error);
+                    });
+                })
+                .catch((error) => {
+                    alert('حدث خطأ: ' + error.message);
+                });
+        });
     </script>
 </body>
+
 </html>
